Updated core dependency to latest, and added a varargs overload for LazyLocatorListFactory getWith. (#23)